feat: Add Properties and Test for Auto Bean reg

--- a/jdbc/src/main/resources/application.properties
+++ b/jdbc/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+#AOP transaction에서 container에 자동 등록할 datasource bean을 위한 설정값
+spring.datasource.url=jdbc:h2:tcp://localhost/~/test2
+spring.datasource.username=sa
+spring.datasource.password=
